# narwhal

./: Cargo.toml
account-keys/: Cargo.toml
account-keys/src/: account_keys.rs  identity.rs  lib.rs
benchmark/: .node-0  .node-1  .node-2  .node-3  fabfile.py  requirements.txt  settings.json
benchmark/benchmark/: commands.py  config.py  instance.py  local.py  logs.py  plot.py  remote.py  settings.py  utils.py
benchmark/data/paper-data/: plot-script.py
benchmark/data/paper-data/adamastor/: bench-0-10-10000-512.txt  bench-0-10-20000-512.txt  bench-0-10-40000-512.txt  bench-0-10-5000-512.txt  bench-0-10-80000-512.txt  bench-0-4-10000-512.txt  bench-0-4-20000-512.txt  bench-0-4-40000-512.txt  bench-0-4-5000-512.txt  bench-0-4-80000-512.txt  bench-0-7-10000-512.txt  bench-0-7-20000-512.txt  bench-0-7-40000-512.txt  bench-0-7-5000-512.txt  bench-0-7-80000-512.txt  bench-1-4-10000-512.txt  bench-1-4-20000-512.txt  bench-1-4-40000-512.txt  bench-1-4-80000-512.txt  bench-2-7-10000-512.txt  bench-2-7-40000-512.txt  bench-2-7-5000-512.txt  bench-3-10-10000-512.txt  bench-3-10-20000-512.txt  bench-3-10-80000-512.txt
benchmark/data/paper-data/adamastor_forks/: bench-0-10-10000-512.txt  bench-0-10-20000-512.txt  bench-0-10-40000-512.txt  bench-0-10-5000-512.txt  bench-0-10-80000-512.txt  bench-0-4-10000-512.txt  bench-0-4-20000-512.txt  bench-0-4-40000-512.txt  bench-0-4-5000-512.txt  bench-0-4-80000-512.txt  bench-0-7-20000-512.txt  bench-0-7-5000-512.txt  bench-0-7-80000-512.txt  bench-1-4-5000-512.txt  bench-2-7-20000-512.txt  bench-2-7-80000-512.txt  bench-3-10-40000-512.txt  bench-3-10-5000-512.txt
benchmark/data/paper-data/bullshark/: bench-0-10-10000-512.txt  bench-0-10-20000-512.txt  bench-0-10-40000-512.txt  bench-0-10-5000-512.txt  bench-0-10-80000-512.txt  bench-0-4-10000-512.txt  bench-0-4-20000-512.txt  bench-0-4-40000-512.txt  bench-0-4-5000-512.txt  bench-0-4-80000-512.txt  bench-0-7-10000-512.txt  bench-0-7-20000-512.txt  bench-0-7-40000-512.txt  bench-0-7-5000-512.txt  bench-0-7-80000-512.txt  bench-1-4-80000-512.txt  bench-2-7-40000-512.txt  bench-3-10-20000-512.txt  bench-3-10-40000-512.txt  bench-3-10-80000-512.txt
benchmark/data/paper-data/bullshark_forks/: bench-0-10-10000-512.txt  bench-0-10-20000-512.txt  bench-0-10-40000-512.txt  bench-0-10-5000-512.txt  bench-0-10-80000-512.txt  bench-0-4-10000-512.txt  bench-0-4-20000-512.txt  bench-0-4-40000-512.txt  bench-0-4-5000-512.txt  bench-0-4-80000-512.txt  bench-0-7-10000-512.txt  bench-0-7-20000-512.txt  bench-0-7-40000-512.txt  bench-0-7-5000-512.txt  bench-0-7-80000-512.txt  bench-1-4-10000-512.txt  bench-1-4-20000-512.txt  bench-1-4-40000-512.txt  bench-1-4-5000-512.txt  bench-2-7-10000-512.txt  bench-2-7-20000-512.txt  bench-2-7-5000-512.txt  bench-2-7-80000-512.txt  bench-3-10-10000-512.txt  bench-3-10-5000-512.txt
benchmark/data/paper-data/tendermint/: bench-0-10-10000-512.txt  bench-0-10-20000-512.txt  bench-0-10-40000-512.txt  bench-0-10-5000-512.txt  bench-0-10-80000-512.txt  bench-0-4-10000-512.txt  bench-0-4-20000-512.txt  bench-0-4-40000-512.txt  bench-0-4-5000-512.txt  bench-0-4-80000-512.txt  bench-0-7-10000-512.txt  bench-0-7-20000-512.txt  bench-0-7-40000-512.txt  bench-0-7-5000-512.txt  bench-0-7-80000-512.txt  bench-1-4-10000-512.txt  bench-1-4-20000-512.txt  bench-1-4-5000-512.txt  bench-1-4-80000-512.txt  bench-2-7-10000-512.txt  bench-2-7-5000-512.txt  bench-3-10-20000-512.txt
benchmark/data/paper-data/tendermint_forks/: bench-0-10-10000-512.txt  bench-0-10-20000-512.txt  bench-0-10-40000-512.txt  bench-0-10-5000-512.txt  bench-0-10-80000-512.txt  bench-0-4-10000-512.txt  bench-0-4-20000-512.txt  bench-0-4-40000-512.txt  bench-0-4-5000-512.txt  bench-0-4-80000-512.txt  bench-0-7-10000-512.txt  bench-0-7-20000-512.txt  bench-0-7-40000-512.txt  bench-0-7-5000-512.txt  bench-0-7-80000-512.txt  bench-1-4-40000-512.txt  bench-2-7-20000-512.txt  bench-2-7-80000-512.txt  bench-3-10-10000-512.txt  bench-3-10-40000-512.txt  bench-3-10-5000-512.txt  (+1 more)
config/: Cargo.toml
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: lib.rs
crypto/: Cargo.toml
crypto/core/: Cargo.toml
crypto/core/src/: account_keys.rs  compressed_commitment.rs  domain_separators.rs  keys.rs  lib.rs  onetime_keys.rs  transaction.rs  util.rs
crypto/core/src/tests/: crypto_tests.rs
crypto/keys/: Cargo.toml
crypto/keys/src/: ed25519.rs  lib.rs  ristretto.rs  tx_hash.rs
crypto/ring-signature/: Cargo.toml
crypto/ring-signature/signer/: Cargo.toml
crypto/ring-signature/signer/src/: lib.rs  local_signer.rs  no_keys_ring_signer.rs  traits.rs
crypto/ring-signature/src/: domain_separators.rs  lib.rs  onetime_keys.rs
crypto/ring-signature/src/amount/: commitment.rs  compressed_commitment.rs
crypto/ring-signature/src/ring_signature/: curve_scalar.rs  generator_cache.rs  key_image.rs  mlsag.rs  mod.rs  triptych.rs  util.rs
crypto/src/: account_keys.rs  commitment.rs  compressed_commitment.rs  curve_scalar.rs  error.rs  key_image.rs  lib.rs  masked_amount.rs  ristretto.rs  transaction.rs  triptych.rs
crypto/src/tests/: crypto_tests.rs
network/: Cargo.toml
network/src/: receiver.rs  reliable_sender.rs  simple_sender.rs
node/: Cargo.toml
node/src/: benchmark_client.rs  main.rs
primary/: Cargo.toml
primary/src/: aggregators.rs  constants.rs  core.rs  election.rs  error.rs  garbage_collector.rs  header_waiter.rs  helper.rs  lib.rs  messages.rs  payload_receiver.rs  primary.rs  proposer.rs  synchronizer.rs
primary/src/tests/: common.rs
transaction/: Cargo.toml
transaction/core/: Cargo.toml
transaction/core/src/: lib.rs  tx.rs  tx_error.rs
transaction/core/src/range_proofs/: mod.rs
transaction/core/src/validation/: error.rs  mod.rs  validate.rs
transaction/src/: lib.rs
transaction/types/: Cargo.toml
transaction/types/src/: constants.rs  lib.rs  proptest_fixtures.rs  unmasked_amount.rs
worker/: Cargo.toml
worker/src/: batch_maker.rs  helper.rs  lib.rs  processor.rs  quorum_waiter.rs  synchronizer.rs  worker.rs
worker/src/tests/: batch_maker_tests.rs  common.rs
(+4 files in other folders)
