[package]
name = "config"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.24"
serde_json = "1.0.64"
log = "0.4.14"

mc-account-keys = { path = "../account-keys" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-util-from-random = { path = "../util/from-random" }
rand_core = "0.6"
ed25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = [ "rand" ] }