[package]
name = "consensus"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync"] }
log = "0.4.14"

config = { path = "../config" }
primary = { path = "../primary" }

mc-account-keys = { path = "../account-keys" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-transaction-core = { path = "../transaction/core" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []
