[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
base64 = "0.13.0"

bulletproofs = "3"
curve25519-dalek-ng = "3"
rand_core = "0.6.4"
num-integer = "0.1.45"
sha2 = { version = "0.10", default-features = false }
zkp = "0.8.0"
bincode = "1.3.1"
chacha20poly1305 = "0.10.1"

