[package]
name = "primary"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
futures = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
ed25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = [ "rand" ] }
thiserror = "1.0.20"
bincode = "1.3.1"
bytes = "1.0.1"
env_logger = "0.7.1"
log = "0.4.11"
async-recursion = "0.3.2"
async-trait = "0.1.50"

store = { path = "../store" }
config = { path = "../config" }
network = { path = "../network" }

mc-account-keys = { path = "../account-keys" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-transaction-core = { path = "../transaction/core" }

curve25519-dalek = { version = "4.0.0-pre.2", default-features = false }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []