[package]
name = "worker"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
log = "0.4.14"
bincode = "1.3.3"
futures = "0.3.14"
async-trait = "0.1.50"

store = { path = "../store" }
config = { path = "../config" }
network = { path = "../network" }
primary = { path = "../primary" }

bulletproofs = "3"
rand = "0.7.3"
curve25519-dalek = { version = "4.0.0-pre.2", default-features = false, features = ["nightly"] }

mc-account-keys = { path = "../account-keys" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-crypto-ring-signature = { path = "../crypto/ring-signature" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-types = { path = "../transaction/types" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []
