[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
base64 = "0.13.0"

bulletproofs = "3"
curve25519-dalek-ng = "3"
rand_core = "0.5"
num-integer = "0.1.45"
sha2 = { version = "0.10.6", default-features = false }
zkp = "0.8.0"
bincode = "1.3.1"
chacha20poly1305 = "0.10.1"
schnorrkel = { path = "../../schnorrkel" }
sha3 = "0.9.1"
signature = { version = "1.4.0", default-features = false, features = ["digest-preview"] }
blake2 = "0.10.2"
crc = { version = "3.0.0", default-features = false }
hkdf = "0.12"
zeroize = { version = "1.5", default-features = false }




