[package]
name = "mc-crypto-ring-signature"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
readme = "README.md"

[features]
alloc = ["serde?/alloc", "mc-crypto-digestible/alloc", "mc-util-repr-bytes/alloc", "mc-crypto-dalek/alloc"]
serde = ["dep:serde", "mc-crypto-dalek/serde", "mc-crypto-keys/serde"]
prost = ["dep:prost", "mc-crypto-keys/prost", "mc-util-serial"]

[dependencies]
# External dependencies
displaydoc = { version = "0.2", default-features = false }
hex_fmt = "0.3"
# Enable all default features not known to break code coverage builds
proptest = { version = "1.0", default-features = false, features = ["default-code-coverage"] }
prost = { version = "0.11", optional = true, default-features = false, features = ["prost-derive"] }
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.4.1", default-features = false, features = ["i128"] }
zeroize = { version = "1", default-features = false }
log = "0.4.14"

# MobileCoin dependencies
mc-account-keys = { path = "../../account-keys", default-features = false }
mc-crypto-dalek = { path = "../../crypto/dalek", default-features = false }
mc-crypto-digestible = { path = "../../crypto/digestible", features = ["dalek", "derive"] }
mc-crypto-hashes = { path = "../../crypto/hashes" }
mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
mc-util-from-random = { path = "../../util/from-random" }
mc-util-repr-bytes = { path = "../../util/repr-bytes" }
mc-util-serial = { path = "../../util/serial", optional = true }

[target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
curve25519-dalek = { version = "4.0.0-pre.2", default-features = false, features = ["simd_backend", "nightly", "serde"] }
[target.'cfg(not(any(target_feature = "avx2", target_feature = "avx")))'.dependencies]
curve25519-dalek = { version = "4.0.0-pre.2", default-features = false, features = ["nightly", "u64_backend", "serde"] }

[dev-dependencies]
tempdir = "0.3"

mc-crypto-digestible-test-utils = { path = "../../crypto/digestible/test-utils" }
mc-util-serial = { path = "../../util/serial", features = ["std"] }
mc-util-test-helper = { path = "../../util/test-helper" }
