[package]
name = "mc-transaction-core"
version = "4.1.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
# External dependencies
displaydoc = { version = "0.2", default-features = false }
hex_fmt = "0.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
base64 = "0.13.0"
merlin = { version = "3.0", default-features = false }
zeroize = { version = "1", default-features = false }

mc-account-keys = { path = "../../account-keys" }
mc-common = { path = "../../common", default-features = false }
mc-crypto-keys = { path = "../../crypto/keys" }
mc-crypto-digestible = { path = "../../crypto/digestible", features = ["dalek", "derive"] }
mc-crypto-ring-signature = { path = "../../crypto/ring-signature", default-features = false, features = [ "alloc", "serde", "prost" ] }
mc-transaction-types = { path = "../types" }


