[package]
name = "mc-transaction-core"
version = "4.1.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
# External dependencies
base64 = "0.13.0"
bincode = "1.3.1"
bulletproofs-og = { version = "3.0.0-pre.1", default-features = false }
chacha20poly1305 = "0.10.1"
curve25519-dalek = { version = "4.0.0-pre.2", default-features = false, features = ["nightly"] }
displaydoc = { version = "0.2", default-features = false }
hex_fmt = "0.3"
lazy_static = { version = "1.4.0" }
merlin = { version = "3.0", default-features = false }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
zeroize = { version = "1", default-features = false }

mc-account-keys = { path = "../../account-keys" }
mc-common = { path = "../../common", default-features = false }
mc-crypto-keys = { path = "../../crypto/keys" }
mc-crypto-digestible = { path = "../../crypto/digestible", features = ["dalek", "derive"] }
mc-crypto-ring-signature = { path = "../../crypto/ring-signature", default-features = false, features = [ "alloc", "serde", "prost" ] }
mc-transaction-types = { path = "../types" }
mc-util-from-random = { path = "../../util/from-random" }


